# SDL2Wrapper

./: .gitignore  .gitmodules  BuildDebug.bat  CMakeLists.txt  CMakePlusBuild.bat  CreateDebugCmake.bat  CreateProjects.bat  README.md  Reset2Master.sh  SDL2Wrapper.sln  TestCmake.sh  downloadDeps.sh  libsdl2wrapper.sln
.github/workflows/: cmake-windows.yml  cmake.yml
SDL2Wrapper/: Makefile  SDL2WrapperDynamic.vcxproj  SDL2WrapperDynamic.vcxproj.filters  SDL2WrapperStatic.vcxproj  SDL2WrapperStatic.vcxproj.filters
SDL2Wrapper/inc/SDL2Wrapper/: IObject.hpp  ISDL2Wrapper.hpp  IWindow.hpp
SDL2Wrapper/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
SDL2Wrapper/nbproject/private/: private.xml
SDL2Wrapper/src/: IObject.cpp  IWindow.cpp  RegularSDL2Window.cpp  RegularSDL2Window.hpp  SDL2Wrapper.cpp  SDL2WrapperImpl.cpp  SDL2WrapperImpl.hpp  Sprite.cpp  Sprite.hpp  TextureWrapper.cpp  TextureWrapper.hpp
TestApp/: Makefile  TestApp.vcxproj  main.cpp
TestApp/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
TestApp/nbproject/private/: configurations.xml  private.xml
cmake_modules/: Findsdl2.cmake
libsdl2wrapper/: CMakeLists.txt  CPP_FILES_LIST.txt  HEADER_FILES_LIST.txt  ITexture.hpp  Makefile  Makefile.orig  libsdl2wrapper.vcxproj  libsdl2wrapper.vcxproj.filters
libsdl2wrapper/inc/SDL2Wrapper/: IDevice.hpp  IEventLoop.hpp  IKey.hpp  IKeyboardObservable.hpp  IKeyboardObserver.hpp  IMPORT_DX11.hpp  IMPORT_DX9.hpp  IMPORT_SDL.hpp  IMPORT_SDL_opengl.hpp  IMPORT_SDL_renderer.hpp  IMPORT_SDL_video.hpp  IMPORT_Windows.hpp  IObject.hpp  IObjectRegister.hpp  IRender.hpp  ISDL2Wrapper.hpp  ISDLEventObserver.hpp  ISprite.hpp  ITexture.hpp  IWindow.hpp  IWindowEventListener.hpp  IWindowEventObservable.hpp  IWindowFactory.hpp  Import.hpp  RendererTypes.hpp  SDL2Wrapper.hpp  WinSize.hpp  WindowData.hpp  WindowEventType.hpp
libsdl2wrapper/inc/SDL2Wrapper/Gui/: IGui.hpp
libsdl2wrapper/inc/SDL2Wrapper/Input/: IKey.hpp  IKeyboardObservable.hpp  IKeyboardObserver.hpp  IMouseData.hpp  IMouseObservable.hpp  IMouseObserver.hpp  KeyboardDefines.hpp  MouseData.hpp
libsdl2wrapper/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-variables.mk  configurations.xml  project.xml
libsdl2wrapper/nbproject/private/: configurations.xml
libsdl2wrapper/src/: IKey.cpp  IMPORT_SDL_events.hpp  IMPORT_SDL_image.hpp  IMPORT_SDL_opengl.hpp  IObject.cpp  IRender.cpp  ISDL2Wrapper.cpp  ISDLInputObserver.hpp  ISprite.cpp  ITexture.cpp  IWindow.cpp  IWindowFactory.cpp  KeySDL.cpp  KeySDL.hpp  RegularSDL2Window.cpp  RegularSDL2Window.hpp  RendererTypes.cpp  SDL2Wrapper.cpp  SDL2WrapperImpl.cpp  SDL2WrapperImpl.hpp  SimpleUtils.cpp  SimpleUtils.hpp  Sprite.cpp  Sprite.hpp  TextureSDL.cpp  TextureSDL.hpp  TextureWrapper.cpp  TextureWrapper.hpp  WindowFactoryConcrete.cpp  WindowFactoryConcrete.hpp  WindowWithOpenGL.cpp  WindowWithOpenGL.hpp
libsdl2wrapper/src/Input/: IKey.cpp  KeySDL.cpp  KeySDL.hpp  MouseData.cpp  MouseDataSDL.cpp  MouseDataSDL.hpp
libsdl2wrapperTestApp/: CMakeLists.txt  Makefile  Makefile.orig  build_errors.txt  libsdl2wrapperTestApp.vcxproj  libsdl2wrapperTestApp.vcxproj.filters  main.cpp
libsdl2wrapperTestApp/libsdl2wrapperTestApp/nbproject/: configurations.xml  project.xml
libsdl2wrapperTestApp/libsdl2wrapperTestApp/nbproject/private/: configurations.xml
libsdl2wrapperTestApp/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.properties
libsdl2wrapperTestApp/nbproject/private/: configurations.xml
libsdl2wrapperTestAppGui/: Makefile  libsdl2wrapperTestAppGui.vcxproj  libsdl2wrapperTestAppGui.vcxproj.filters  main.cpp
media/: Config.txt
runDir/: Readme.txt
